--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,15 @@ margin-bottom: 1em;
         line-height:100px;
     }
 }
+.header2 {
+    height: auto;
+}
+
+.header2.logo,
+.header2 nav {
+    line-height:50px;
+}
+
 
     background-color: aqua;
     width: 500px;
