--- a/css/style.css
+++ b/css/style.css
@@ -1,104 +1,91 @@
-*{margin:0; padding:0}
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
-    background: #fffffa;
+  background: #fffffa;
 }
 
 header {
-    width: 100%;
-    overflow: hidden;
-    background:#252932;
-    margin-bottom:20px ;
+  width: 100%;
+  overflow: hidden;
+  background: #252932;
+  margin-bottom: 20px;
 }
 
 .wrapper {
-    width: 90%;
-    max-width:1000px;
-    margin: auto;
-    overflow: hidden;
+  width: 90%;
+  max-width: 1000px;
+  margin: auto;
+  overflow: hidden;
 }
 
 header .logo {
-    color: #f2f2f2;
-    font-size:50px;
-    line-height:100px;
-    float:left;
+  color: #f2f2f2;
+  font-size: 50px;
+  line-height: 200px;
+  float: left;
 }
 
 header nav {
-    float:right;
-    line-height:100px;
+  float: right;
+  line-height: 200px;
 }
 
 header nav a {
-    display:inline-block;
-    color: #fff;
-    text-decoration:none;
-    padding: 10px 20px;
-    line-height:normal;
-    font-size: 20px;
-    font-weight:bold;
-    -webkit-transition:all 500ms ease;
-    -o-transition:all 500ms ease;
-    transition:all 500ms ease;
+  display: inline-block;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  line-height: normal;
+  font-size: 20px;
+  font-weight: bold;
+  -webkit-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+  transition: all 500ms ease;
 }
 
 header nav a:hover {
-    background-color: red;
-    border-radius:50px;
+  background: red;
+  border-radius: 50px;
 }
 
 .header2 {
-    position: fixed;
-    height:100px;
+  position: fixed;
+  height: 100px;
 }
 
-.header2 .logo {
-    line-height:100px;
-    font-size:30px;
+.header2.logo {
+  line-height: 100px;
+  font-size: 30px;
 }
 
-.header2 nav {
-    line-height: 100px;
+.header nav {
+  line-height: 100px;
 }
 
 .contenido p {
-margin-bottom: 1em;
+  margin-bottom: 1em;
 }
+
+/*# sourceMappingURL=style.css.map */
 
 @media screen and (max-width: 950px) {
     header .logo,
     header nav {
         width:100%;
-        text-align:center;
-        line-height:100px;
+        text-align: center;
+        line-height: 100px;
     }
-}
+
+
 .header2 {
-    height: auto;
+    height:auto;
 }
 
-.header2.logo,
+.header2 .logo,
 .header2 nav {
-    line-height:50px;
+    line-height: 50px;
 }
-
-
-    background-color: aqua;
-    width: 500px;
-    height: 400px;
-    display: flex;
-   flex-direction: column;
-   justify-content: center;
-    align-items: flex-start;
-
-   
-}
-
-.flex-item {
-    background-color: blue;
-}
-
-.flex-item:nth-child(odd){
-background-color: red;
 }
